--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^4.1.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
+    "serve-favicon": "^2.5.0",
     "uuid": "^8.3.2"
   }
 }
