--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
     "serve-favicon": "^2.5.0",
+    "socket.io": "^4.4.0",
     "uuid": "^8.3.2"
   }
 }
